# git-auto-fetch

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  rust-toolchain.toml
src/: main.rs
