# cargo-features = ["edition2021"]

[package]
name = "git-auto-fetch"
description = "does a git fetch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = "2.34.0"
config = "0.11.0"
git2 = "0.13.25"
log = "0.4.14"
log4rs = "1.0.0"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.59"
structopt = "0.3.25"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
